--- a/zero-inst/Makefile.in
+++ b/zero-inst/Makefile.in
@@ -4,7 +4,7 @@ MODULEDIR := /lib/modules/`uname -r`/kernel/fs/lazyfs
 all: lazyfs.o zero
 
 CC=gcc
-CFLAGS   := -O2 -Wall -Wstrict-prototypes -Wmissing-prototypes -Wno-trigraphs -fno-strict-aliasing -fno-common -g
+CFLAGS   := -O2 -Wall -Wstrict-prototypes -Wno-trigraphs -fno-strict-aliasing -fno-common -g
 MODFLAGS := -DMODULE -D__KERNEL__
 #UMFLAGS  := -I${KERNEL}/include -U__i386__ -Ui386 -DUM_FASTCALL -D__arch_um__ -DSUBARCH="i386" -D_LARGEFILE64_SOURCE -I${KERNEL}/arch/um/include -Derrno=kernel_errno -I${KERNEL}/arch/um/kernel/tt/include -I${KERNEL}/arch/um/kernel/skas/include -DARCH=um
 
