Moved everything to XML.

--- a/htdocs/Makefile
+++ b/htdocs/Makefile
@@ -1,2 +1,8 @@
-check:
-	xmllint --noout --valid *.html
+HTML = index.html compare.html faq.html install.html technical.html
+
+all: ${HTML}
+
+%.html: %.xml to_html.xsl
+	#xmllint --noout --valid $<
+	xsltproc -o $@ --stringparam file "$@" to_html.xsl "$<"
+	xmllint --noout --valid $@
