--- a/zero-inst/Makefile.in
+++ b/zero-inst/Makefile.in
@@ -17,7 +17,7 @@ UMFLAGS := -I${KERNEL}/arch/um/include -I${KERNEL}/arch/um/kernel/tt/include -I$
 clean:
 	rm -f *.o hello_glib zero-install
 
-KERNELFLAGS := -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes
+KERNELFLAGS := -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes -O2 -Wall
 MODFLAGS := -DMODULE -D__KERNEL__
 
 install:
