--- a/zero-inst/configure.in
+++ b/zero-inst/configure.in
@@ -1,4 +1,5 @@
 AC_INIT(lazyfs.c)
+AC_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
 
@@ -32,5 +33,14 @@ EOF
   exit 1
 fi
 AC_MSG_RESULT(OK)
+
+AC_MSG_CHECKING(for platform type)
+ARCH=`uname -m`
+case $ARCH in
+	i?86) ARCH=ix86 ;;
+esac
+PLATFORM=`uname -s`-$ARCH
+AC_MSG_RESULT($PLATFORM)
+AC_DEFINE_UNQUOTED(LAZYFS_PLATFORM, "$PLATFORM")
 
 AC_OUTPUT(Makefile)
