--- a/zero-inst/configure.in
+++ b/zero-inst/configure.in
@@ -28,7 +28,8 @@ if ! test -r "$KERNELDIR/include/linux/version.h"; then
 The file $KERNELDIR/include/linux/version.h does not exist.
 Please, install the package with full kernel sources for your distribution
 or use --with-kernel=dir option to specify another directory with kernel
-sources (default is /usr/src/linux).
+sources (default is /usr/src/linux). Note: this error could also mean
+that you haven't built the kernel yet.
 EOF
   exit 1
 fi
