--- a/zero-inst/Makefile.in
+++ b/zero-inst/Makefile.in
@@ -1,10 +1,3 @@
-ifneq ($(KERNELRELEASE),)
-	# We're building for Linux 2.5 from kconfig
-	obj-m	:= lazyfs.o
-else
-KERNEL := @KERNELDIR@
-MODULEDIR := /lib/modules/`uname -r`/kernel/fs/lazyfs
-LINUX_2_5_SERIES := @LINUX_2_5_SERIES@
 HELPER_USER := @HELPER_USER@
 
 TESTS := hello_glib
@@ -13,33 +6,27 @@ PKG_CONFIG_PATH=${CORE}/lib/pkgconfig
 
 ZERO_OBJECTS := zero-install.o support.o fetch.o control.o index.o
 
-all: lazyfs.o zero-install 0show 0refresh #${TESTS}
+all: kernel-module zero-install 0show 0refresh #${TESTS}
 
 CC	 := @CC@
 CFLAGS   := -O2 -Wall -Wstrict-prototypes -g
 
-UMFLAGS := -I${KERNEL}/arch/um/include -I${KERNEL}/arch/um/kernel/tt/include -I${KERNEL}/arch/um/kernel/skas/include -DARCH=um
-
 clean:
 	rm -f *.o hello_glib zero-install 0show 0refresh
-
-KERNELFLAGS := -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes -O2 -Wall # ${UMFLAGS}
-MODFLAGS := -DMODULE -D__KERNEL__
+	make -C Linux clean
 
 install:
-	mkdir -p ${MODULEDIR}
-	cp lazyfs.o ${MODULEDIR}/
-	depmod -a
+	make -C Linux install
 	[ -d /uri ] || mkdir /uri
 	[ -d /var/cache/zero-inst ] || mkdir -m 0755 /var/cache/zero-inst
 	chown "${HELPER_USER}" /var/cache/zero-inst
 	grep -q "^lazyfs" /etc/fstab ||	echo "lazyfs          /uri            lazyfs  /var/cache/zero-inst            0 0" >> /etc/fstab
 
-lazyfs.o: lazyfs.c
-	if [ -n "${LINUX_2_5_SERIES}" ]; then $(MAKE) -C $(KERNEL) SUBDIRS=`pwd` modules; else ${CC} -c ${KERNELFLAGS} ${MODFLAGS} -o $@ $<; fi
-
 zero-install: ${ZERO_OBJECTS}
 	${CC} -o $@ ${ZERO_OBJECTS} -lexpat
+
+kernel-module:
+	make -C Linux
 
 # Test program using glib
 
@@ -48,4 +35,3 @@ hello_glib.o: hello_glib.c
 
 hello_glib: hello_glib.o
 	PKG_CONFIG_PATH=${PKG_CONFIG_PATH} gcc `${CORE}/bin/pkg-config --libs glib-2.0` -o $@ $<
-endif
