--- a/zero-inst/Linux/config.h.in
+++ b/zero-inst/Linux/config.h.in
@@ -1,11 +1,25 @@
-/* Linux/config.h.in.  Generated automatically from configure.in by autoheader 2.13.  */
-
-/* Name of package */
-#undef PACKAGE
-
-/* Version number of package */
-#undef VERSION
+/* Linux/config.h.in.  Generated from configure.in by autoheader.  */
 
 /* The canonical name for @PLATFORM@ symlinks */
 #undef LAZYFS_PLATFORM
 
+/* Name of package */
+#undef PACKAGE
+
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
+/* Version number of package */
+#undef VERSION
