Unload module, even if /uri isn't mounted.

--- a/zero-inst/Linux/Makefile.in
+++ b/zero-inst/Linux/Makefile.in
@@ -29,8 +29,12 @@ MODFLAGS := -DMODULE -D__KERNEL__
 install: lazyfs.o
 	mkdir -p ${MODULEDIR}
 	cp lazyfs.o ${MODULEDIR}/
-	[ -n "${ROOT_PREFIX}" ] || (depmod -a && \
-	 [ ! -L /uri/.lazyfs-cache ] || (umount /uri && rmmod lazyfs))
+	[ -n "${ROOT_PREFIX}" ] || ${MAKE} real-install
+
+real-install:
+	depmod -a
+	[ ! -L /uri/.lazyfs-cache ] || umount /uri
+	if lsmod | grep -q '^lazyfs[ \t]'; then rmmod lazyfs; fi
 
 uninstall:
 	rm ${MODULEDIR}/lazyfs.o
