--- a/zero-inst/Linux/Makefile.in
+++ b/zero-inst/Linux/Makefile.in
@@ -34,6 +34,7 @@ install: lazyfs.o
 real-install:
 	depmod -a
 	[ ! -L /uri/.lazyfs-cache ] || umount /uri
+	[ ! -L /uri/0http/.lazyfs-cache ] || umount /uri/0http
 	if lsmod | grep -q '^lazyfs[ \t]'; then rmmod lazyfs; fi
 
 uninstall:
