--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -21,13 +21,18 @@ zero_install_LDFLAGS = `pkg-config --libs libxml-2.0`
 
 install-exec-local:
 	make uninstall-local
+	[ -n "${ROOT_PREFIX}" ] || make install-real
+
+install-real:
 	[ ! -L /uri/.lazyfs-cache ] || umount /uri
-	([ -d /uri ] || mkdir /uri) && \
-	([ -d /uri/0install ] || mkdir /uri/0install) && \
- 	([ -d /var/cache/zero-inst ] || mkdir -m 0755 /var/cache/zero-inst) && \
-	([ -n "${ROOT_PREFIX}" ] || \
- 	 chown "${HELPER_USER}" /var/cache/zero-inst && \
- 	 echo "lazyfs	/uri/0install	lazyfs	/var/cache/zero-inst	0 0" >> ${FSTAB})
+	[ -d /uri ] || mkdir /uri
+	[ -d /uri/0install ] || mkdir /uri/0install
+	[ ! -d /uri/0http -o -L /uri/0http ] || rmdir /uri/0http
+	[ -L /uri/0http ] || ln -s 0install /uri/0http
+	[ -L /uri/http ] || ln -s 0install /uri/http
+	[ -d /var/cache/zero-inst ] || mkdir -m 0755 /var/cache/zero-inst
+	chown "${HELPER_USER}" /var/cache/zero-inst
+	echo "lazyfs	/uri/0install	lazyfs	/var/cache/zero-inst	0 0" >> ${FSTAB}
 
 uninstall-local:
 	if [ -z "${ROOT_PREFIX}" ]; then \
