* New /bin/0run program to be used in scripts, eg: 	#!/bin/0run example.com/myprog 2003-01-01
* 0refresh can be given an argument to use instead of `pwd`.

--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -1,10 +1,12 @@
 HELPER_USER := @HELPER_USER@
 ROOT_PREFIX = @ROOT_PREFIX@
 FSTAB := /etc/fstab
+myexecbindir := /bin
 
 AUTOMAKE_OPTIONS = foreign
 
 bin_PROGRAMS = 0show 0refresh
+myexecbin_PROGRAMS = 0run
 sbin_PROGRAMS = zero-install
 
 SUBDIRS = Linux
