--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -13,13 +13,14 @@ initd_SCRIPTS = 0install
 
 SUBDIRS = Linux
 
-EXTRA_DIST = Linux/lazyfs.c Linux/lazyfs.h Linux/compat20.h Linux/Makefile.in Technical 0test.py test_cases.py
+EXTRA_DIST = Linux/lazyfs.c Linux/lazyfs.h Linux/compat20.h Linux/Makefile.in Technical 0test.py test_cases.py 0install.in
 DISTCHECK_CONFIGURE_FLAGS = --with-user=zeroinst --with-distcheck
 
 zero_install_SOURCES = zero-install.c support.c fetch.c control.c index.c \
 		       zero-install.h support.h fetch.h control.h index.h \
 		       list.c list.h global.h task.c task.h gpg.c gpg.h \
 		       xml.c xml.h
+CLEANFILES = 0install
 
 INCLUDES = `pkg-config --cflags dbus-1`
 zero_install_LDFLAGS = `pkg-config --libs dbus-1` -lexpat
