Get mirror from mirrors.xml.

--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -18,8 +18,8 @@ DISTCHECK_CONFIGURE_FLAGS = --with-user=zeroinst --with-distcheck
 
 zero_install_SOURCES = zero-install.c support.c fetch.c control.c index.c \
 		       zero-install.h support.h fetch.h control.h index.h \
-		       list.c list.h global.h task.c task.h gpg.c gpg.h \
-		       xml.c xml.h
+		       list.c list.h mirrors.c mirrors.h global.h task.c \
+		       task.h gpg.c gpg.h xml.c xml.h
 CLEANFILES = 0install
 
 INCLUDES = `pkg-config --cflags dbus-1`
