Fixed some build problems.

--- a/zero-inst/Linux/config.h.in
+++ b/zero-inst/Linux/config.h.in
@@ -1,5 +1,8 @@
 /* Linux/config.h.in.  Generated from configure.in by autoheader.  */
 
+/* Escaped version number */
+#undef COMMA_VERSION
+
 /* The canonical name for @PLATFORM@ symlinks */
 #undef LAZYFS_PLATFORM
 
@@ -22,4 +25,4 @@
 #undef PACKAGE_VERSION
 
 /* Version number of package */
-#undef COMMA_VERSION
+#undef VERSION
