--- a/zero-inst/configure.in
+++ b/zero-inst/configure.in
@@ -126,7 +126,7 @@ AC_MSG_RESULT($KERNEL_TYPE)
 AC_SUBST(KERNEL_TYPE)
 COMMA_VERSION=`echo $VERSION|sed 's/\\./d/g'`
 AC_SUBST(COMMA_VERSION)
-AC_DEFINE_UNQUOTED(COMMA_VERSION, "$COMMA_VERSION")
+AC_DEFINE_UNQUOTED(COMMA_VERSION, "$COMMA_VERSION", [Escaped version number])
 
 AC_MSG_CHECKING(for platform type)
 ARCH=`uname -m`
