--- a/zero-inst/Linux/Makefile.in
+++ b/zero-inst/Linux/Makefile.in
@@ -27,12 +27,12 @@ CFLAGS   := -O2 -Wall -Wstrict-prototypes -g
 UMFLAGS := -I${KERNEL}/arch/um/include -I${KERNEL}/arch/um/kernel/tt/include -I${KERNEL}/arch/um/kernel/skas/include -DARCH=um
 
 clean:
-	rm -f lazyfs.o
+	rm -f lazyfs*.o lazyfs@COMMA_VERSION@.c
 
 KERNELFLAGS := -Werror -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes -O2 -Wall # ${UMFLAGS}
 MODFLAGS := -DMODULE -D__KERNEL__
 
-install: lazyfs.$(KOBJECT)
+install: lazyfs@COMMA_VERSION@.$(KOBJECT)
 	mkdir -p ${MODULEDIR}
 	cp lazyfs@COMMA_VERSION@.$(KOBJECT) ${MODULEDIR}/
 	[ -n "${ROOT_PREFIX}" ] || ${MAKE} real-install
@@ -49,10 +49,10 @@ uninstall:
 
 lazyfs@COMMA_VERSION@.c: lazyfs.c
 	rm -f lazyfs@COMMA_VERSION@.c
-	ln lazyfs.c lazyfs@COMMA_VERSION@.c
+	ln $(srcdir)/lazyfs.c lazyfs@COMMA_VERSION@.c
 
 lazyfs@COMMA_VERSION@.o: lazyfs@COMMA_VERSION@.c
-	${CC} -I. -I$(srcdir) -c ${KERNELFLAGS} ${MODFLAGS} -o lazyfs.o $(srcdir)/lazyfs.c
+	${CC} -I. -I$(srcdir) -c ${KERNELFLAGS} ${MODFLAGS} -o "$@" "$<"
 
 lazyfs@COMMA_VERSION@.ko: lazyfs@COMMA_VERSION@.c
 	$(MAKE) -C $(KERNEL) SUBDIRS=`pwd` modules
