* Don't compile with -Werror (header files on some systems generate warnings).   Get rid of compiler warning about an unsigned comparision (reported by   Stephen Watson). Added hint about where to get D-BUS from. Removed pointless initialisation.

--- a/zero-inst/configure.in
+++ b/zero-inst/configure.in
@@ -138,6 +138,7 @@ AC_MSG_RESULT($PLATFORM)
 AC_DEFINE_UNQUOTED(LAZYFS_PLATFORM, "$PLATFORM", [The canonical name for @PLATFORM@ symlinks])
 
 dnl PKG_REQUIRE(libxml-2.0, 2.0.0)
+echo '  (D-BUS is available from freedesktop.org)'
 PKG_REQUIRE(dbus-1, 0.12)
 
 AC_CHECK_HEADER(expat.h, [], [
