--- a/zero-inst/Linux/Makefile.in
+++ b/zero-inst/Linux/Makefile.in
@@ -29,7 +29,8 @@ UMFLAGS := -I${KERNEL}/arch/um/include -I${KERNEL}/arch/um/kernel/tt/include -I$
 clean:
 	rm -f lazyfs*.o lazyfs@COMMA_VERSION@.c
 
-KERNELFLAGS := -Werror -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes -O2 -Wall # ${UMFLAGS}
+# -Werror causes problems on some builds (unsigned int problems in headers)
+KERNELFLAGS := -I${KERNEL}/include -Wno-trigraphs -fno-strict-aliasing -fno-common -Wall -Wstrict-prototypes -O2 -Wall # ${UMFLAGS} -Werror
 MODFLAGS := -DMODULE -D__KERNEL__
 
 install: lazyfs@COMMA_VERSION@.$(KOBJECT)
