* Use 'su -p -c' instead of 'su -s'. Some systems don't have -s (reported by   Sampo Vuori).

--- a/zero-inst/0install.in
+++ b/zero-inst/0install.in
@@ -8,7 +8,7 @@ test -f "@zero-install@" || exit 0
 case "$1" in
   start)
     echo Starting zero-install...
-    su "@helper_user@" -s "@zero-install@"
+    su "@helper_user@" -p -c "@zero-install@"
     ;;
   stop)
     echo Stopping zero-install...
